Add RT1170 Scan and Load fuse function

--- a/bin/fuse_settings.json
+++ b/bin/fuse_settings.json
@@ -1,86 +1,390 @@
 {
  "FuseMAP": [
   {
-   "Fuse0x400": "0",  
-   "Fuse0x410": "0", 
-   "Fuse0x420": "0", 
-   "Fuse0x430": "0", 
-   "Fuse0x440": "0", 
-   "Fuse0x450": "0", 
-   "Fuse0x460": "0", 
-   "Fuse0x470": "0", 
-   "Fuse0x480": "0", 
-   "Fuse0x490": "0", 
-   "Fuse0x4a0": "0", 
-   "Fuse0x4b0": "0", 
-   "Fuse0x4c0": "0", 
-   "Fuse0x4d0": "0", 
-   "Fuse0x4e0": "0", 
-   "Fuse0x4f0": "0", 
-   "Fuse0x500": "0", 
-   "Fuse0x510": "0", 
-   "Fuse0x520": "0", 
-   "Fuse0x530": "0", 
-   "Fuse0x540": "0", 
-   "Fuse0x550": "0", 
-   "Fuse0x560": "0", 
-   "Fuse0x570": "0", 
-   "Fuse0x580": "0", 
-   "Fuse0x590": "0", 
-   "Fuse0x5a0": "0", 
-   "Fuse0x5b0": "0", 
-   "Fuse0x5c0": "0", 
-   "Fuse0x5d0": "0", 
-   "Fuse0x5e0": "0", 
-   "Fuse0x5f0": "0", 
-   "Fuse0x600": "0", 
-   "Fuse0x610": "0", 
-   "Fuse0x620": "0", 
-   "Fuse0x630": "0", 
-   "Fuse0x640": "0", 
-   "Fuse0x650": "0", 
-   "Fuse0x660": "0", 
-   "Fuse0x670": "0", 
-   "Fuse0x680": "0", 
-   "Fuse0x690": "0", 
-   "Fuse0x6a0": "0", 
-   "Fuse0x6b0": "0", 
-   "Fuse0x6c0": "0", 
-   "Fuse0x6d0": "0", 
-   "Fuse0x6e0": "0", 
-   "Fuse0x6f0": "0", 
-   "Fuse0x700": "0", 
-   "Fuse0x710": "0", 
-   "Fuse0x720": "0", 
-   "Fuse0x730": "0", 
-   "Fuse0x740": "0", 
-   "Fuse0x750": "0", 
-   "Fuse0x760": "0", 
-   "Fuse0x770": "0", 
-   "Fuse0x780": "0", 
-   "Fuse0x790": "0", 
-   "Fuse0x7a0": "0", 
-   "Fuse0x7b0": "0", 
-   "Fuse0x7c0": "0", 
-   "Fuse0x7d0": "0", 
-   "Fuse0x7e0": "0", 
-   "Fuse0x7f0": "0", 
-   "Fuse0x800": "0", 
-   "Fuse0x810": "0", 
-   "Fuse0x820": "0", 
-   "Fuse0x830": "0", 
-   "Fuse0x840": "0", 
-   "Fuse0x850": "0", 
-   "Fuse0x860": "0", 
-   "Fuse0x870": "0", 
-   "Fuse0x880": "0", 
-   "Fuse0x890": "0", 
-   "Fuse0x8a0": "0", 
-   "Fuse0x8b0": "0", 
-   "Fuse0x8c0": "0", 
-   "Fuse0x8d0": "0", 
-   "Fuse0x8e0": "0", 
-   "Fuse0x8f0": "0"
+   "Fuse0x0400": "0", 
+   "Fuse0x0410": "0", 
+   "Fuse0x0420": "0", 
+   "Fuse0x0430": "0", 
+   "Fuse0x0440": "0", 
+   "Fuse0x0450": "0", 
+   "Fuse0x0460": "0", 
+   "Fuse0x0470": "0", 
+   "Fuse0x0480": "0", 
+   "Fuse0x0490": "0", 
+   "Fuse0x04a0": "0", 
+   "Fuse0x04b0": "0", 
+   "Fuse0x04c0": "0", 
+   "Fuse0x04d0": "0", 
+   "Fuse0x04e0": "0", 
+   "Fuse0x04f0": "0", 
+   "Fuse0x0500": "0", 
+   "Fuse0x0510": "0", 
+   "Fuse0x0520": "0", 
+   "Fuse0x0530": "0", 
+   "Fuse0x0540": "0", 
+   "Fuse0x0550": "0", 
+   "Fuse0x0560": "0", 
+   "Fuse0x0570": "0", 
+   "Fuse0x0580": "0", 
+   "Fuse0x0590": "0", 
+   "Fuse0x05a0": "0", 
+   "Fuse0x05b0": "0", 
+   "Fuse0x05c0": "0", 
+   "Fuse0x05d0": "0", 
+   "Fuse0x05e0": "0", 
+   "Fuse0x05f0": "0", 
+   "Fuse0x0600": "0", 
+   "Fuse0x0610": "0", 
+   "Fuse0x0620": "0", 
+   "Fuse0x0630": "0", 
+   "Fuse0x0640": "0", 
+   "Fuse0x0650": "0", 
+   "Fuse0x0660": "0", 
+   "Fuse0x0670": "0", 
+   "Fuse0x0680": "0", 
+   "Fuse0x0690": "0", 
+   "Fuse0x06a0": "0", 
+   "Fuse0x06b0": "0", 
+   "Fuse0x06c0": "0", 
+   "Fuse0x06d0": "0", 
+   "Fuse0x06e0": "0", 
+   "Fuse0x06f0": "0", 
+   "Fuse0x0700": "0", 
+   "Fuse0x0710": "0", 
+   "Fuse0x0720": "0", 
+   "Fuse0x0730": "0", 
+   "Fuse0x0740": "0", 
+   "Fuse0x0750": "0", 
+   "Fuse0x0760": "0", 
+   "Fuse0x0770": "0", 
+   "Fuse0x0780": "0", 
+   "Fuse0x0790": "0", 
+   "Fuse0x07a0": "0", 
+   "Fuse0x07b0": "0", 
+   "Fuse0x07c0": "0", 
+   "Fuse0x07d0": "0", 
+   "Fuse0x07e0": "0", 
+   "Fuse0x07f0": "0", 
+   "Fuse0x0800": "0", 
+   "Fuse0x0810": "0", 
+   "Fuse0x0820": "0", 
+   "Fuse0x0830": "0", 
+   "Fuse0x0840": "0", 
+   "Fuse0x0850": "0", 
+   "Fuse0x0860": "0", 
+   "Fuse0x0870": "0", 
+   "Fuse0x0880": "0", 
+   "Fuse0x0890": "0", 
+   "Fuse0x08a0": "0", 
+   "Fuse0x08b0": "0", 
+   "Fuse0x08c0": "0", 
+   "Fuse0x08d0": "0", 
+   "Fuse0x08e0": "0", 
+   "Fuse0x08f0": "0", 
+   "Fuse0x0900": "0", 
+   "Fuse0x0910": "0", 
+   "Fuse0x0920": "0", 
+   "Fuse0x0930": "0", 
+   "Fuse0x0940": "0", 
+   "Fuse0x0950": "0", 
+   "Fuse0x0960": "0", 
+   "Fuse0x0970": "0", 
+   "Fuse0x0980": "0", 
+   "Fuse0x0990": "0", 
+   "Fuse0x09a0": "0", 
+   "Fuse0x09b0": "0", 
+   "Fuse0x09c0": "0", 
+   "Fuse0x09d0": "0", 
+   "Fuse0x09e0": "0", 
+   "Fuse0x09f0": "0", 
+   "Fuse0x0a00": "0", 
+   "Fuse0x0a10": "0", 
+   "Fuse0x0a20": "0", 
+   "Fuse0x0a30": "0", 
+   "Fuse0x0a40": "0", 
+   "Fuse0x0a50": "0", 
+   "Fuse0x0a60": "0", 
+   "Fuse0x0a70": "0", 
+   "Fuse0x0a80": "0", 
+   "Fuse0x0a90": "0", 
+   "Fuse0x0aa0": "0", 
+   "Fuse0x0ab0": "0", 
+   "Fuse0x0ac0": "0", 
+   "Fuse0x0ad0": "0", 
+   "Fuse0x0ae0": "0", 
+   "Fuse0x0af0": "0", 
+   "Fuse0x0b00": "0", 
+   "Fuse0x0b10": "0", 
+   "Fuse0x0b20": "0", 
+   "Fuse0x0b30": "0", 
+   "Fuse0x0b40": "0", 
+   "Fuse0x0b50": "0", 
+   "Fuse0x0b60": "0", 
+   "Fuse0x0b70": "0", 
+   "Fuse0x0b80": "0", 
+   "Fuse0x0b90": "0", 
+   "Fuse0x0ba0": "0", 
+   "Fuse0x0bb0": "0", 
+   "Fuse0x0bc0": "0", 
+   "Fuse0x0bd0": "0", 
+   "Fuse0x0be0": "0", 
+   "Fuse0x0bf0": "0", 
+   "Fuse0x0c00": "0", 
+   "Fuse0x0c10": "0", 
+   "Fuse0x0c20": "0", 
+   "Fuse0x0c30": "0", 
+   "Fuse0x0c40": "0", 
+   "Fuse0x0c50": "0", 
+   "Fuse0x0c60": "0", 
+   "Fuse0x0c70": "0", 
+   "Fuse0x0c80": "0", 
+   "Fuse0x0c90": "0", 
+   "Fuse0x0ca0": "0", 
+   "Fuse0x0cb0": "0", 
+   "Fuse0x0cc0": "0", 
+   "Fuse0x0cd0": "0", 
+   "Fuse0x0ce0": "0", 
+   "Fuse0x0cf0": "0", 
+   "Fuse0x0d00": "0", 
+   "Fuse0x0d10": "0", 
+   "Fuse0x0d20": "0", 
+   "Fuse0x0d30": "0", 
+   "Fuse0x0d40": "0", 
+   "Fuse0x0d50": "0", 
+   "Fuse0x0d60": "0", 
+   "Fuse0x0d70": "0", 
+   "Fuse0x0d80": "0", 
+   "Fuse0x0d90": "0", 
+   "Fuse0x0da0": "0", 
+   "Fuse0x0db0": "0", 
+   "Fuse0x0dc0": "0", 
+   "Fuse0x0dd0": "0", 
+   "Fuse0x0de0": "0", 
+   "Fuse0x0df0": "0", 
+   "Fuse0x0e00": "0", 
+   "Fuse0x0e10": "0", 
+   "Fuse0x0e20": "0", 
+   "Fuse0x0e30": "0", 
+   "Fuse0x0e40": "0", 
+   "Fuse0x0e50": "0", 
+   "Fuse0x0e60": "0", 
+   "Fuse0x0e70": "0", 
+   "Fuse0x0e80": "0", 
+   "Fuse0x0e90": "0", 
+   "Fuse0x0ea0": "0", 
+   "Fuse0x0eb0": "0", 
+   "Fuse0x0ec0": "0", 
+   "Fuse0x0ed0": "0", 
+   "Fuse0x0ee0": "0", 
+   "Fuse0x0ef0": "0", 
+   "Fuse0x0f00": "0", 
+   "Fuse0x0f10": "0", 
+   "Fuse0x0f20": "0", 
+   "Fuse0x0f30": "0", 
+   "Fuse0x0f40": "0", 
+   "Fuse0x0f50": "0", 
+   "Fuse0x0f60": "0", 
+   "Fuse0x0f70": "0", 
+   "Fuse0x0f80": "0", 
+   "Fuse0x0f90": "0", 
+   "Fuse0x0fa0": "0", 
+   "Fuse0x0fb0": "0", 
+   "Fuse0x0fc0": "0", 
+   "Fuse0x0fd0": "0", 
+   "Fuse0x0fe0": "0", 
+   "Fuse0x0ff0": "0", 
+   "Fuse0x1000": "0", 
+   "Fuse0x1010": "0", 
+   "Fuse0x1020": "0", 
+   "Fuse0x1030": "0", 
+   "Fuse0x1040": "0", 
+   "Fuse0x1050": "0", 
+   "Fuse0x1060": "0", 
+   "Fuse0x1070": "0", 
+   "Fuse0x1080": "0", 
+   "Fuse0x1090": "0", 
+   "Fuse0x10a0": "0", 
+   "Fuse0x10b0": "0", 
+   "Fuse0x10c0": "0", 
+   "Fuse0x10d0": "0", 
+   "Fuse0x10e0": "0", 
+   "Fuse0x10f0": "0", 
+   "Fuse0x1100": "0", 
+   "Fuse0x1110": "0", 
+   "Fuse0x1120": "0", 
+   "Fuse0x1130": "0", 
+   "Fuse0x1140": "0", 
+   "Fuse0x1150": "0", 
+   "Fuse0x1160": "0", 
+   "Fuse0x1170": "0", 
+   "Fuse0x1180": "0", 
+   "Fuse0x1190": "0", 
+   "Fuse0x11a0": "0", 
+   "Fuse0x11b0": "0", 
+   "Fuse0x11c0": "0", 
+   "Fuse0x11d0": "0", 
+   "Fuse0x11e0": "0", 
+   "Fuse0x11f0": "0", 
+   "Fuse0x1200": "0", 
+   "Fuse0x1210": "0", 
+   "Fuse0x1220": "0", 
+   "Fuse0x1230": "0", 
+   "Fuse0x1240": "0", 
+   "Fuse0x1250": "0", 
+   "Fuse0x1260": "0", 
+   "Fuse0x1270": "0", 
+   "Fuse0x1280": "0", 
+   "Fuse0x1290": "0", 
+   "Fuse0x12a0": "0", 
+   "Fuse0x12b0": "0", 
+   "Fuse0x12c0": "0", 
+   "Fuse0x12d0": "0", 
+   "Fuse0x12e0": "0", 
+   "Fuse0x12f0": "0", 
+   "Fuse0x1300": "0", 
+   "Fuse0x1310": "0", 
+   "Fuse0x1320": "0", 
+   "Fuse0x1330": "0", 
+   "Fuse0x1340": "0", 
+   "Fuse0x1350": "0", 
+   "Fuse0x1360": "0", 
+   "Fuse0x1370": "0", 
+   "Fuse0x1380": "0", 
+   "Fuse0x1390": "0", 
+   "Fuse0x13a0": "0", 
+   "Fuse0x13b0": "0", 
+   "Fuse0x13c0": "0", 
+   "Fuse0x13d0": "0", 
+   "Fuse0x13e0": "0", 
+   "Fuse0x13f0": "0", 
+   "Fuse0x1400": "0", 
+   "Fuse0x1410": "0", 
+   "Fuse0x1420": "0", 
+   "Fuse0x1430": "0", 
+   "Fuse0x1440": "0", 
+   "Fuse0x1450": "0", 
+   "Fuse0x1460": "0", 
+   "Fuse0x1470": "0", 
+   "Fuse0x1480": "0", 
+   "Fuse0x1490": "0", 
+   "Fuse0x14a0": "0", 
+   "Fuse0x14b0": "0", 
+   "Fuse0x14c0": "0", 
+   "Fuse0x14d0": "0", 
+   "Fuse0x14e0": "0", 
+   "Fuse0x14f0": "0", 
+   "Fuse0x1500": "0", 
+   "Fuse0x1510": "0", 
+   "Fuse0x1520": "0", 
+   "Fuse0x1530": "0", 
+   "Fuse0x1540": "0", 
+   "Fuse0x1550": "0", 
+   "Fuse0x1560": "0", 
+   "Fuse0x1570": "0", 
+   "Fuse0x1580": "0", 
+   "Fuse0x1590": "0", 
+   "Fuse0x15a0": "0", 
+   "Fuse0x15b0": "0", 
+   "Fuse0x15c0": "0", 
+   "Fuse0x15d0": "0", 
+   "Fuse0x15e0": "0", 
+   "Fuse0x15f0": "0", 
+   "Fuse0x1600": "0", 
+   "Fuse0x1610": "0", 
+   "Fuse0x1620": "0", 
+   "Fuse0x1630": "0", 
+   "Fuse0x1640": "0", 
+   "Fuse0x1650": "0", 
+   "Fuse0x1660": "0", 
+   "Fuse0x1670": "0", 
+   "Fuse0x1680": "0", 
+   "Fuse0x1690": "0", 
+   "Fuse0x16a0": "0", 
+   "Fuse0x16b0": "0", 
+   "Fuse0x16c0": "0", 
+   "Fuse0x16d0": "0", 
+   "Fuse0x16e0": "0", 
+   "Fuse0x16f0": "0", 
+   "Fuse0x1700": "0", 
+   "Fuse0x1710": "0", 
+   "Fuse0x1720": "0", 
+   "Fuse0x1730": "0", 
+   "Fuse0x1740": "0", 
+   "Fuse0x1750": "0", 
+   "Fuse0x1760": "0", 
+   "Fuse0x1770": "0", 
+   "Fuse0x1780": "0", 
+   "Fuse0x1790": "0", 
+   "Fuse0x17a0": "0", 
+   "Fuse0x17b0": "0", 
+   "Fuse0x17c0": "0", 
+   "Fuse0x17d0": "0", 
+   "Fuse0x17e0": "0", 
+   "Fuse0x17f0": "0", 
+   "Fuse0x1800": "0", 
+   "Fuse0x1810": "0", 
+   "Fuse0x1820": "0", 
+   "Fuse0x1830": "0", 
+   "Fuse0x1840": "0", 
+   "Fuse0x1850": "0", 
+   "Fuse0x1860": "0", 
+   "Fuse0x1870": "0", 
+   "Fuse0x1880": "0", 
+   "Fuse0x1890": "0", 
+   "Fuse0x18a0": "0", 
+   "Fuse0x18b0": "0", 
+   "Fuse0x18c0": "0", 
+   "Fuse0x18d0": "0", 
+   "Fuse0x18e0": "0", 
+   "Fuse0x18f0": "0", 
+   "Fuse0x1900": "None", 
+   "Fuse0x1910": "None", 
+   "Fuse0x1920": "None", 
+   "Fuse0x1930": "None", 
+   "Fuse0x1940": "None", 
+   "Fuse0x1950": "None", 
+   "Fuse0x1960": "None", 
+   "Fuse0x1970": "None", 
+   "Fuse0x1980": "None", 
+   "Fuse0x1990": "None", 
+   "Fuse0x19a0": "None", 
+   "Fuse0x19b0": "None", 
+   "Fuse0x19c0": "None", 
+   "Fuse0x19d0": "None", 
+   "Fuse0x19e0": "None", 
+   "Fuse0x19f0": "None", 
+   "Fuse0x1a00": "None", 
+   "Fuse0x1a10": "None", 
+   "Fuse0x1a20": "None", 
+   "Fuse0x1a30": "None", 
+   "Fuse0x1a40": "None", 
+   "Fuse0x1a50": "None", 
+   "Fuse0x1a60": "None", 
+   "Fuse0x1a70": "None", 
+   "Fuse0x1a80": "None", 
+   "Fuse0x1a90": "None", 
+   "Fuse0x1aa0": "None", 
+   "Fuse0x1ab0": "None", 
+   "Fuse0x1ac0": "None", 
+   "Fuse0x1ad0": "None", 
+   "Fuse0x1ae0": "None", 
+   "Fuse0x1af0": "None", 
+   "Fuse0x1b00": "None", 
+   "Fuse0x1b10": "None", 
+   "Fuse0x1b20": "None", 
+   "Fuse0x1b30": "None", 
+   "Fuse0x1b40": "None", 
+   "Fuse0x1b50": "None", 
+   "Fuse0x1b60": "None", 
+   "Fuse0x1b70": "None", 
+   "Fuse0x1b80": "None", 
+   "Fuse0x1b90": "None", 
+   "Fuse0x1ba0": "None", 
+   "Fuse0x1bb0": "None", 
+   "Fuse0x1bc0": "None", 
+   "Fuse0x1bd0": "None", 
+   "Fuse0x1be0": "None", 
+   "Fuse0x1bf0": "None"
   }
  ]
 }
